--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -13,4 +13,4 @@ textColor = "#000080" #"#fafafa"
 
 # Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
 # Default: "sans serif"
-font = "cursive"   # "verdana"
+font = "serif" # "cursive"   # "verdana"
