--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ python-dateutil==2.8.2
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==23.2.1
+qrcode==7.3.1
 requests==2.28.1
 rich==12.5.1
 semver==2.13.0
