--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,13 +3,13 @@
 primaryColor = "#d33682"
 
 # Background color for the main content area.
-backgroundColor = "#000000" # "#454545" # "#ECF0F1"
+backgroundColor = "#000000"
 
 # Background color used for the sidebar and most interactive widgets.
-secondaryBackgroundColor =  "#4D4B48"
+secondaryBackgroundColor =  "#454545"
 
 # Color used for almost all text.
-textColor = "#fafafa" # "#000080" "#0000FF"
+textColor = "#FFFFFF" # "#fafafa"  "#0000FF"
 
 # Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
 # Default: "sans serif"
