--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,13 +3,13 @@
 primaryColor = "#d33682"
 
 # Background color for the main content area.
-backgroundColor = "#000000"
+backgroundColor = "#1c1c1e"
 
 # Background color used for the sidebar and most interactive widgets.
-secondaryBackgroundColor =  "#454545"
+secondaryBackgroundColor =  "#1c1c1e" 
 
 # Color used for almost all text.
-textColor = "#FFFFFF" # "#fafafa"  "#0000FF"
+textColor = "#fefefe" # "#FFFFFF" # "#fafafa"  "#0000FF"
 
 # Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
 # Default: "sans serif"
